--- a/main.html
+++ b/main.html
@@ -8,6 +8,63 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+        <div>
+            <label for="fname">Name:</label> 
+            <input type="text" name="fname"  value=""placeholder="enter your name" required>
+        </div>
+		<br>
+		<div>
+            <label for="email">Email:</label> 
+            <input type="email" name="email" id="email"  value=""placeholder="enter your email" required>
+        </div>
+		<br>
+		<div>
+            <label for="gender">Gender:</label> 
+            <input type="radio" name="gender" id="Gender" value="male" required> male
+            <input type="radio" name="gender" id="Gender" value="female" required> female
+		</div>
+		<br>
+		<div>
+            <label for="car Brands">Choose your car:</label>
+            <select name="car " id="car ">
+               <option value="--Please choose an option--" dis>--Please choose an option-- </option>
+                <option value="BMW">BMW</option>
+                <option value="Audi">Audi</option>
+                <option value="Mercedez">Mercedez</option>
+            </select>
+        </div>
+		<br>
+		<div>
+			<label for="age">Age:</label>
+			<input type="number" name="age" id="age"  placeholder="age" required> 
+		</div>
+		<br>
+		<div>
+            <label for="dop">Date of Birth(dob):</label> 
+            <input type="date" name="dob" id="dob" required>
+        </div>
+		<br>
+		<div>
+            <label for="phoneNo">Phone number:</label> 
+            <input type="tel" name="phoneNo" id="phoneNo" placeholder="xxx-xxx-xxxx"required>
+        </div>
+		<br>
+		<div>
+            <label for="password">Password:</label> 
+            <input type="password" name="password" id="password" placeholder="Password"required>
+        </div>
+		<br>
+		<div>
+		   <label for=" I agree to the TOS"> </label> 
+           I agree to the TOS  <input type="checkbox" name=" I agree to the TOS" value=" I agree to the TOS."> 
+		</div>
+		<br>
+		<div>
+            <input type="submit">
+           
+        </div>
+	</form>	
     <script type="text/javascript" src="./script.js">
 </script>
 
