--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<form method="post">
         <div>
             <label for="fname">Name:</label> 
-            <input type="text" name="fname"  value=""placeholder="enter your name" required>
+            <input type="text" name="name" id="name" value=""placeholder="enter your name" required>
         </div>
 		<br>
 		<div>
@@ -26,8 +26,8 @@
 		</div>
 		<br>
 		<div>
-            <label for="car Brands">Choose your car:</label>
-            <select name="car " id="car ">
+            <label for="cars Brands">Choose your car:</label>
+            <select name="cars " id="cars ">
                <option value="--Please choose an option--" dis>--Please choose an option-- </option>
                 <option value="BMW">BMW</option>
                 <option value="Audi">Audi</option>
@@ -41,13 +41,13 @@
 		</div>
 		<br>
 		<div>
-            <label for="dop">Date of Birth(dob):</label> 
+            <label for="dob">Date of Birth(dob):</label> 
             <input type="date" name="dob" id="dob" required>
         </div>
 		<br>
 		<div>
-            <label for="phoneNo">Phone number:</label> 
-            <input type="tel" name="phoneNo" id="phoneNo" placeholder="xxx-xxx-xxxx"required>
+            <label for="tel">Phone number:</label> 
+            <input type="tel" name="tel" id="tel" placeholder="xxx-xxx-xxxx"required>
         </div>
 		<br>
 		<div>
@@ -56,12 +56,12 @@
         </div>
 		<br>
 		<div>
-		   <label for=" I agree to the TOS"> </label> 
+		   <label for="tos"> </label> 
            I agree to the TOS  <input type="checkbox" name=" I agree to the TOS" value=" I agree to the TOS."> 
 		</div>
 		<br>
 		<div>
-            <input type="submit">
+            <input type="button" value="Submit">
            
         </div>
 	</form>	
