--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<form method="post">
         <div>
-            <label for="fname">Name:</label> 
+            <label for="name">Name:</label> 
             <input type="text" name="name" id="name" value=""placeholder="enter your name" required>
         </div>
 		<br>
@@ -26,7 +26,7 @@
 		</div>
 		<br>
 		<div>
-            <label for="cars Brands">Choose your car:</label>
+            <label for="cars Brands">Car Brands:</label>
             <select name="cars " id="cars ">
                <option value="--Please choose an option--" dis>--Please choose an option-- </option>
                 <option value="BMW">BMW</option>
@@ -61,7 +61,7 @@
 		</div>
 		<br>
 		<div>
-            <input type="button" value="Submit">
+           <button>Submit</button>
            
         </div>
 	</form>	
