--- a/main.html
+++ b/main.html
@@ -26,8 +26,8 @@
 		</div>
 		<br>
 		<div>
-            <label for="cars Brands">Car Brands:</label>
-            <select name="cars " id="cars ">
+            <label for="cars">Car Brands:</label>
+            <select name="cars " id="cars" required>
                <option value="--Please choose an option--" dis>--Please choose an option-- </option>
                 <option value="BMW">BMW</option>
                 <option value="Audi">Audi</option>
@@ -61,7 +61,7 @@
 		</div>
 		<br>
 		<div>
-           <button>Submit</button>
+           <button type ="submit">Submit</button>
            
         </div>
 	</form>	
