--- a/main.html
+++ b/main.html
@@ -55,10 +55,10 @@
             <input type="password" name="password" id="password" placeholder="Password"required>
         </div>
 		<br>
-		<div>
-		   <label for="tos"> </label> 
-           I agree to the TOS  <input type="checkbox" name=" I agree to the TOS" value=" I agree to the TOS."> 
-		</div>
+		 <div>
+           <input type="checkbox" id="tos" name="tos" required>
+           <label for="tos">I agree to the TOS</label>
+         </div>
 		<br>
 		<div>
            <button type ="submit">Submit</button>
